Adapt ClassLoader hierarchy change for JDK 17 build